NetBSD Problem Report #8384
Received: (qmail 4658 invoked from network); 12 Sep 1999 15:18:02 -0000
Message-Id: <199909121518.IAA22165@nooksack.ldc.cs.wwu.edu>
Date: Sun, 12 Sep 1999 08:18:03 -0700 (PDT)
From: rnestor@augustmail.com
Reply-To: rnestor@augustmail.com
To: gnats-bugs@gnats.netbsd.org
Subject: Unable to rewrite disk partition map in sysinst/mac68k
X-Send-Pr-Version: www-1.0
>Number: 8384
>Category: install
>Synopsis: Unable to rewrite disk partition map in sysinst/mac68k
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: install-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Sep 12 08:20:02 +0000 1999
>Closed-Date: Sun Sep 12 15:33:29 +0000 1999
>Last-Modified: Sun Sep 12 15:34:01 +0000 1999
>Originator: Bob Nestor
>Release: NetBSD-1.4.1
>Organization:
>Environment:
NetBSD pluto 1.4.1 NetBSD 1.4.1 (GENERICSBC) #0: Wed Aug 11 07:03:00 CDT 1999 fredb@corwin.home:/usr/src/sys/arch/mac68k/compile/GENERICSBC mac68k
>Description:
The device name used to open the raw disk for re-writing the Apple Disk
Partition Map is missing the leading "/", therefore the open fails with
an unknown device error.
>How-To-Repeat:
Build and run sysinst/mac68k attempting to modify the disk partition
layout.
>Fix:
Apply the following patch to the file
src/distrib/utils/sysinst/arch/mac68k/md.c
--- md.c.orig Sun Sep 12 09:56:41 1999
+++ md.c Sun Sep 12 09:57:14 1999
@@ -639,7 +639,7 @@
*/
printf ("%s", msg_string (MSG_dodiskmap));
- snprintf (devname, sizeof(devname), "dev/r%sc", diskdev);
+ snprintf (devname, sizeof(devname), "/dev/r%sc", diskdev);
/*
* Open the disk as a raw device
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: briggs
State-Changed-When: Sun Sep 12 08:33:29 PDT 1999
State-Changed-Why:
Patch applied. Pullup to 1.4 branch also requested.
From: Colin Wood <cwood@ichips.intel.com>
To: rnestor@augustmail.com
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: install/8384: Unable to rewrite disk partition map in sysinst/mac68k
Date: Sun, 12 Sep 1999 18:13:30 -0700 (PDT)
rnestor@augustmail.com wrote:
> >Description:
> The device name used to open the raw disk for re-writing the Apple Disk
> Partition Map is missing the leading "/", therefore the open fails with
> an unknown device error.
bob-
are you sure that you have the latest sysinst code? every occurrence of
snprintf (devname, sizeof(devname), "/dev/r%sc", diskdev);
that i could find did in fact have the preceding / on it, including the
one near line 639 or so....
-colin
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.