Put a leading slash on the device name used in md_pre_disklabel(). The pathname was a relative path.  At this point, we should always be using the miniroot's /dev tree.  Fixes PR install/8384 from Bob Nestor.